--- a/static/dest/index.html
+++ b/static/dest/index.html
@@ -6,5 +6,8 @@
     </head>
     <body>
         <script type="text/javascript" src="js/index.js"></script>
+        <div id="app">
+            <div>{{ message }}</div>
+        </div>
     </body>
 </html>
