--- a/static/dest/index.html
+++ b/static/dest/index.html
@@ -3,9 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>あごらなう</title>
+        <link href="css/index.css">
     </head>
     <body>
         <script type="text/javascript" src="js/index.js"></script>
+        <h1>AgoraNow</h1>
         <div id="app">
             <div>{{ message }}</div>
         </div>
