--- a/static/dest/index.html
+++ b/static/dest/index.html
@@ -31,8 +31,9 @@
             <div class="navSpacer"></div>
             <div class="grid listWrapper">
                 <div class="grid-item card" style="width:12em;height:12em;" v-for="status in statusArray">
-                    <h5 class="author">{{ status.author.username }}</h5><br>
-                    <div class="position">{{ status.position.x }} x {{ status.position.y }}</div>
+                    <h5 class="card-title">{{ status.author.username }}</h5><br>
+                    <div class="card-text">{{ status.position.x }} x {{ status.position.y }}</div>
+                    <div class="cared-text">{{ status.comment }}</div>
                 </div>
             </div>
 
@@ -69,7 +70,7 @@
                             <h5 class="modal-title">Create</h5>
                         </div>
                         <div class="modal-body">
-                            <div class="alert alert-primary" v-if="UIflags.loginError">Can't login to Server!!</div>
+                            <div class="alert alert-primary" v-if="UIflags.createError">Can't create Status!!</div>
                             <div class="form-group">
                                 <label>X</label>
                                 <input class="form-control" v-model="createData.pos_X" placeholder="Xposition">
@@ -80,11 +81,11 @@
                             </div>
                             <div class="form-group">
                                 <label>Comment</label>
-                                <textarea class="form-control" v-model="createData.pos_Y" placeholder="I am Agoring now!!"></textarea>
+                                <textarea class="form-control" v-model="createData.comment" placeholder="I am Agoring now!!"></textarea>
                             </div>
                         </div>
                         <div class="modal-footer">
-                            <button class="btn btn-primary" v-on:click="login">Login</button>
+                            <button class="btn btn-primary" v-on:click="create">Create</button>
                             <button class="btn" data-dismiss="modal">Cancel</button>
                         </div>
                     </div>
