some bug fixes and challenge to positioning image.

--- a/static/dest/index.html
+++ b/static/dest/index.html
@@ -109,6 +109,9 @@
                             <h5 class="modal-title">Create</h5>
                         </div>
                         <div class="modal-body">
+                            <div class="form-group">
+                                <img id="clickPositioningImg" class="form-controll" src="imgs/map.png" width="100%"></div>
+                            </div>
                             <div class="alert alert-primary" v-if="UIflags.createError">Can't create Status!!</div>
                             <div class="form-group">
                                 <label>X</label>
