--- a/static/dest/index.html
+++ b/static/dest/index.html
@@ -23,7 +23,7 @@
                 </ul>
                 <div class="navbar-text">
                     {{ userData.username }}
-                    <button class="btn btn-primary" data-toggle="modal" data-target="#createModal" v-if="UIflags.logined">Create</button>
+                    <button class="btn btn-primary" data-toggle="modal" data-target="#createModal" v-if="UIflags.logined" v-on:click="initPosView">Create</button>
                     <button class="btn btn-primary" data-toggle="modal" data-target="#createUserModal" v-if="!UIflags.logined">CreateUser</button>
                     <button class="btn btn-primary" data-toggle="modal" data-target="#loginModal" v-if="!UIflags.logined">Login</button>
 
@@ -31,7 +31,7 @@
             </nav>
             <div class="navSpacer"></div>
             <div class="listWrapper">
-                <div class="alert alert-primary m-3" role="alert">
+                <div class="alert alert-primary m-3" role="alert" v-if="!createData">
                     いまは誰も「あごらなう」してないよ！！
                 </div>
                 <div class="card" style="margin: 1rem;" v-for="status in statusArray">
@@ -103,36 +103,28 @@
             </div>
             <!--createPopup-->
             <div class="modal fade" id="createModal">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title">Create</h5>
-                        </div>
-                        <div class="modal-body">
-                            <div class="form-group">
-                                <img id="clickPositioningImg" class="form-controll" src="imgs/map.png" width="100%"></div>
-                            </div>
-                            <div class="alert alert-primary" v-if="UIflags.createError">Can't create Status!!</div>
-                            <div class="form-group">
-                                <label>X</label>
-                                <input class="form-control" v-model="createData.pos_X" placeholder="Xposition">
-                            </div>
-                            <div class="form-group">
-                                <label>Y</label>
-                                <input class="form-control" v-model="createData.pos_Y" placeholder="Yposition">
-                            </div>
-                            <div class="form-group">
-                                <label>Comment</label>
-                                <textarea class="form-control" v-model="createData.comment" placeholder="I am Agoring now!!"></textarea>
-                            </div>
-                        </div>
-                        <div class="modal-footer">
-                            <button class="btn btn-primary" v-on:click="create">Create</button>
-                            <button class="btn" data-dismiss="modal">Cancel</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </body>
+				<div class="modal-dialog">
+					<div class="modal-content">
+						<div class="modal-header">
+							<h5 class="modal-title">Create</h5>
+						</div>
+            				<div class="modal-body">
+								<div class="alert alert-primary" v-if="UIflags.createError">Can't create Status!!</div>
+								<div class="canvasWrapper" width="100%" v-on:click="initPosView">
+									<canvas id="positioningCanvas">/canvas>
+								</div>
+								<div class="form-group">
+									<label>Comment</label>
+									<textarea class="form-control" v-model="createData.comment" placeholder="I am Agoring now!!"></textarea>
+								</div>
+							</div>
+							<div class="modal-footer">
+								<button class="btn btn-primary" v-on:click="create">Create</button>
+								<button class="btn" data-dismiss="modal">Cancel</button>
+							</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
