--- a/static/dest/index.html
+++ b/static/dest/index.html
@@ -37,7 +37,11 @@
                 <div class="card" style="margin: 1rem;" v-for="status in statusArray">
                     <h5 class="card-title" style="margin:1rem;">{{ status.author.username }}</h5><br>
                     <div class="card-body">
-                        <div class="card-text">{{ status.position.x }} x {{ status.position.y }}</div>
+						<div style="position: relative;">
+							<img src="imgs/map.png" width="100%">
+							<img src="imgs/marker2.svg" style="position: absolute; width: 20%;" v-bind:style="{top: status.position.y + '%', left: status.position.x + '%'}">
+						</div>
+						<div class="card-title">コメント</div>
                         <div class="card-text">{{ status.comment }}</div>
                     </div>
                     <div class="card-footer">
@@ -110,8 +114,9 @@
 						</div>
             				<div class="modal-body">
 								<div class="alert alert-primary" v-if="UIflags.createError">Can't create Status!!</div>
-								<div class="canvasWrapper" width="100%" v-on:click="initPosView">
-									<canvas id="positioningCanvas">/canvas>
+								<div class="canvasWrapper" width="100%" v-on:click="initPosView" style="padding: 0;margin: 20px;position: relative;">
+									<img id="createMap" src="imgs/map.png" width="100%">
+									<img id="createMarker" src="imgs/marker2.svg" style="position: absolute;width: 20%;">
 								</div>
 								<div class="form-group">
 									<label>Comment</label>
@@ -127,4 +132,4 @@
 			</div>
 		</div>
 	</body>
-</html>
+l</html>
