--- a/static/dest/index.html
+++ b/static/dest/index.html
@@ -116,7 +116,7 @@
 								<div class="alert alert-primary" v-if="UIflags.createError">Can't create Status!!</div>
 								<div class="canvasWrapper" width="100%" v-on:click="initPosView" style="padding: 0;margin: 20px;position: relative;">
 									<img id="createMap" src="imgs/map.png" width="100%">
-									<img id="createMarker" src="imgs/marker2.svg" style="position: absolute;width: 20%;">
+									<img id="createMarker" src="imgs/marker2.svg" style="position: absolute;width: 20%;visibility: hidden;">
 								</div>
 								<div class="form-group">
 									<label>Comment</label>
